--- a/styles.css
+++ b/styles.css
@@ -181,7 +181,7 @@ body {
     z-index: 10;
     text-align: left;
     margin: 0;
-    padding: 0 40px;
+    padding: 0 0 0 20px;
     width: 100%;
 }
 
@@ -354,6 +354,7 @@ body {
     justify-content: flex-start;
     position: relative;
     z-index: 10;
+    padding-left: 20px;
 }
 
 .search-form {
