--- a/styles.css
+++ b/styles.css
@@ -489,7 +489,7 @@ body {
     height: 100%;
     min-width: 140px;
     margin-left: 0;
-    margin-right: -1px;
+    margin-right: 0;
 }
 
 .search-btn:hover {
