--- a/styles.css
+++ b/styles.css
@@ -408,6 +408,7 @@ body {
     overflow: hidden;
     width: 600px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
 }
 
 .form-content {
@@ -415,6 +416,7 @@ body {
     align-items: center;
     padding: 0 25px 0 25px;
     height: 70px;
+    padding-right: 150px;
 }
 
 .mode-content {
@@ -490,6 +492,9 @@ body {
     min-width: 140px;
     margin-left: 0;
     margin-right: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 .search-btn:hover {
