--- a/styles.css
+++ b/styles.css
@@ -1329,6 +1329,29 @@ button[type="submit"],
     color: #059669;
 }
 
+/* Triangle Divider */
+.triangle-divider {
+    width: 100%;
+    height: 0;
+    border-left: 50vw solid transparent;
+    border-right: 50vw solid transparent;
+    border-top: 80px solid #F5F5DC;
+    position: relative;
+    margin-top: -1px;
+}
+
+.triangle-divider::before {
+    content: '';
+    position: absolute;
+    top: -80px;
+    left: 0;
+    width: 100%;
+    height: 0;
+    border-left: 50vw solid transparent;
+    border-right: 50vw solid transparent;
+    border-top: 80px solid #1a1a1a;
+}
+
 /* Why Choose VIN TRUST Section */
 .why-choose-section {
     padding: 100px 0;
@@ -1981,5 +2004,14 @@ button[type="submit"],
     
     .price-amount-table {
         font-size: 22px;
+    }
+    
+    .triangle-divider {
+        border-top: 60px solid #F5F5DC;
+    }
+    
+    .triangle-divider::before {
+        border-top: 60px solid #1a1a1a;
+        top: -60px;
     }
 }
