--- a/styles.css
+++ b/styles.css
@@ -1336,9 +1336,8 @@ button[type="submit"],
 }
 
 .why-choose-content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 40px;
+    display: flex;
+    justify-content: flex-end;
     align-items: start;
 }
 
