--- a/styles.css
+++ b/styles.css
@@ -1336,8 +1336,9 @@ button[type="submit"],
 }
 
 .why-choose-content {
-    display: flex;
-    justify-content: flex-end;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
     align-items: start;
 }
 
